--- a/resume_optimizer/core/templates/core/login.html
+++ b/resume_optimizer/core/templates/core/login.html
@@ -115,7 +115,6 @@
                 max-width: 90vw;
             }
         }
-
     </style>
 </head>
 <body>
@@ -124,6 +123,7 @@
         <form method="post" novalidate>
             {% csrf_token %}
             {{ form.as_p }}
+            <input type="hidden" name="next" value="{% url 'index' %}" />
             <button type="submit">Login</button>
         </form>
         <p class="login-link">Don't have an account? <a href="{% url 'register' %}">Register here</a>.</p>
