--- a/resume_optimizer/core/templates/core/index.html
+++ b/resume_optimizer/core/templates/core/index.html
@@ -636,7 +636,7 @@
           `).join('');
         })
         .catch(error => {
-          container.innerHTML = '<div class="activity-error">Failed to load activities</div>';
+          container.innerHTML = '<div class="activity-error">Failed to load activities. Please sign up or login first.</div>';
         });
     }
 
